feat: :sparkles: add parameter to swagger
